chore: single version source in workspace Cargo.toml
- Added workspace.package.version = '0.3.1'
- All crates inherit version via version.workspace = true
- Removed version from tauri.conf.json (Tauri reads from Cargo.toml)
- To bump: change one line in root Cargo.toml, everything follows

Signed-off-by: Three Foxes (in a Trenchcoat) <threefoxes53235@gmail.com>
Signed-off-by: Three Foxes (in a Trenchcoat) <threefoxesyes3inatrenchcoat@gmail.com>

--- a/llmfit-core/Cargo.toml
+++ b/llmfit-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "llmfit-core"
-version = "0.3.1"
+version.workspace = true
 edition = "2024"
 authors = ["axjns"]
 description = "Core library for llmfit — hardware detection, model fitting, and provider integration"
