fix: correct crates.io metadata and prepare for publishing
- Rename llmfit-tui package to llmfit for crates.io continuity
- Add homepage and keywords to llmfit-core for publishing
- Update authors field to proper format
- Add version requirement for llmfit-core dependency

Fixes #58

Signed-off-by: Three Foxes (in a Trenchcoat) <threefoxesyes3inatrenchcoat@gmail.com>

--- a/llmfit-core/Cargo.toml
+++ b/llmfit-core/Cargo.toml
@@ -2,10 +2,14 @@
 name = "llmfit-core"
 version.workspace = true
 edition = "2024"
-authors = ["axjns"]
+authors = ["Alex Jones <alex@example.com>"]
 description = "Core library for llmfit — hardware detection, model fitting, and provider integration"
 license = "MIT"
 repository = "https://github.com/AlexsJones/llmfit"
+homepage = "https://github.com/AlexsJones/llmfit"
+readme = "../README.md"
+keywords = ["llm", "hardware", "inference", "models", "gpu"]
+categories = ["hardware-support"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
